[package]
name = "mhgd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
lightwave-3d = "1.0.0"
itertools = "0.10.5"
starforcelib = { path = "../starforcelib" }
springylib = { path = "../springylib" }
