[package]
name = "mhgd"
version = "0.1.0"
edition = "2021"

[lib]
name = "mhgd"
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
lightwave-3d = "1.0.0"
itertools = "0.10.5"
dds-rs = "0.7.0"
starforcelib = { path = "../starforcelib" }
springylib = { path = "../springylib" }
powerrender-3d = { path = "../powerrender-3d" }
